--- a/install_httpd/tasks/main.yml
+++ b/install_httpd/tasks/main.yml
@@ -25,10 +25,10 @@
         state: enabled
     when: ansible_os_family == "CentOS"
     
-  - name: Copy files in {{ dest_folder }}
+  - name: copy files in {{ dest_folder }}
     copy: src={{ item }} dest={{ dest_folder }} mode=0555
     loop:
       - "index.html"
     notify:
-      - Restart Apache CentOS
+      - restart Apache CentOS
 ...
