--- a/install_httpd/tasks/main.yml
+++ b/install_httpd/tasks/main.yml
@@ -30,5 +30,5 @@
     loop:
       - "index.html"
     notify:
-      - restart Apache CentOS
+      - restart {{ package_name }} service CentOS
 ...
